70. Selecting a garbage collector (#14)